#5 order`s block is created

--- a/src/assets/styles/nav.scss
+++ b/src/assets/styles/nav.scss
@@ -49,6 +49,7 @@
     box-shadow: 0px 2px 5px #000000;
     border-bottom-left-radius: 24px;
     border-bottom-right-radius: 24px;
+    z-index: 100;
   }
   &-submenu__item {
     height: 3.75rem;
@@ -115,6 +116,7 @@
 
     &-menu {
       position: absolute;
+      z-index: 90;
       top: 0%;
       left: -15%;
       width: 50vw;
