--- a/src/assets/styles/tarifs.scss
+++ b/src/assets/styles/tarifs.scss
@@ -1,7 +1,7 @@
 .tarifs {
   background-color: #E5E5E5;
   display: flex;
-
+  height: auto;
   .container {
     width: 80vw;
     margin: 5% auto;
