--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -48,7 +48,7 @@ header {
 
 main {
   display: grid;
-  grid-template-rows: 100vh 75%;
+  grid-template-rows: 100vh auto;
   grid-template-columns: 100vw;
 }
 @import "nav.scss";
